@@ -2,9 +2,11 @@ Mahout Change Log
 
 Release 0.11.0 - unreleased
 
+  MAHOUT-1690: CLONE - Some vector dumper flags are expecting arguments. (smarthi)
+
   MAHOUT-1693: FunctionalMatrixView materializes row vectors in scala shell (apalumbo)
 
-  MAHOUT-1680: Renamed mahout-distribution to apache-mahout-distribution
+  MAHOUT-1680: Renamed mahout-distribution to apache-mahout-distribution (sslavic)
 
 Release 0.10.0 - 2015-04-11
 
